# TaskWeaver

./: pyproject.toml  requirements.txt
docs/superpowers/learn/: M1-domain-dsl.md  M2-nodes.md  M3-engine-executor.md
domain/: __init__.py  dsl.py
engine/: __init__.py  executor.py
nodes/: __init__.py  base.py  end.py  llm.py  start.py  tts.py
tests/: test_dsl.py  test_executor.py  test_nodes.py
